--- a/src/Componentes/ItemListContainer/ItemListContainer.css
+++ b/src/Componentes/ItemListContainer/ItemListContainer.css
@@ -1,11 +1,15 @@
-h2  {
+.listContainer {
 
-    margin-top: 15%;
-    font-family: neue-haas-grotesk-display;
-    font-size: 70px;
-    text-align: center;
-    font-weight: bold;
-    margin-left: 100px;
+    font-size: 10px;
+    border: 1px solid black;
+    width: 400px;
   
   
+  
+  }
+
+.eachCard{
+ border: 5px solid red;
+ width: 400px;
+
   }
