--- a/src/Componentes/Navbar.css
+++ b/src/Componentes/Navbar.css
@@ -46,8 +46,8 @@ header a{
         visibility: visible;
         transform: scaleX(0.6); }
 
-    .logo {
-        width: 10%;
+    img {
+        width: 100px;
         margin-top: 60px;
     
        
