--- a/src/Componentes/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/Componentes/ItemDetailContainer/ItemDetailContainer.css
@@ -1,15 +1,5 @@
-.Bodydetailcontainer {
-    margin: 1rem;
-    padding: 1rem;
-    background-color: #f7f7f7; 
-    border-radius: 5%;
-    transition: all .7s;
-    font-size: 1.0rem;
-    font-family: Arial, Helvetica,bold;
-    text-align: center;
-    height: 50px;
-     
-     
-    }
-  
-      
+.Bodydetailcontainer{
+
+
+    margin-top: -700px;
+}
