--- a/src/Componentes/ItemList/ItemList.css
+++ b/src/Componentes/ItemList/ItemList.css
@@ -1,7 +1,7 @@
 img {
-
-    width: 200px;
-    height: 200px;
+    margin-top: 60px;
+    width: 100px;
+    height: 100px;
 
 }
 
@@ -9,28 +9,19 @@ img {
 
 border:1px solid black;
 width: 300px;
-height: 350px;
-
-
+height: 400px;
+text-align: center;
+border-radius: 5%;
+font-size: 1.0rem;
+font-family: "monsterrat", sans-serif; 
 
   
-      text-align: center;
-  
-      background-color: #f7f7f7; 
-      border-radius: 5%;
-      transition: all .7s;
-      font-size: 1.0rem;
-      font-family: "monsterrat", sans-serif; 
+
      
   
     }
-    /*
-.coffeeCard :hover {
 
-    -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    -moz-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    -o-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    box-shadow: rgba(0, 0, 0, 0.8) 0px 4px 14px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px; 
+    .title{
 
-}
-*/
+        margin-top: 40px;
+    }
