--- a/src/Componentes/Navbar.css
+++ b/src/Componentes/Navbar.css
@@ -1,5 +1,5 @@
-.wrapnavbar {
-    margin-top: 50px;
+nav{
+
   
     display: flex;
     justify-content: flex-end;
@@ -11,7 +11,10 @@
    
     }
     header{
-        width: 100%;
+        display: flex;
+        align-Items: center;
+        justify-Content: space-between;
+
 
     }
     
@@ -46,12 +49,21 @@ header a{
         visibility: visible;
         transform: scaleX(0.6); }
 
-    img {
-        width: 100px;
-        margin-top: 60px;
+    header img {
+        width: 20%;
+        height: 40%;
+        margin-top: 40px;
+       
     
        
         
 
     }
 
+h1 {
+
+
+    margin-top: 50%;
+    margin-right: 20%;
+    
+}
